# DJI-Robotic-Internship-Algorithm-EmbeddedSystem

sc_code/devel/: .catkin  .rosinstall
sc_code/devel/include/simple_msgs/: CastleEnergy.h  GameStatus.h  RegionOccupy.h
sc_code/devel/lib/map_server/: map_saver  map_server  rtest
sc_code/devel/lib/pkgconfig/: map_server.pc  simple_msgs.pc  simple_planner.pc  simple_robot.pc  simple_tf.pc  simple_visualization.pc
sc_code/devel/lib/simple_planner/: global_planner  local_planner  pid_planner
sc_code/devel/lib/simple_robot/: simple_robot
sc_code/src/simple_planner/: pid_planner.cpp
sc_code/src/simple_robot/: CMakeLists.txt  protocol.h  robot.h  serial_device.cpp  serial_device.h
sc_code/src/simple_visualization/: CMakeLists.txt  visualizer.cpp
sc_localization_ws/build_isolated/: catkin_make_isolated.cache
sc_localization_ws/build_isolated/apriltag_ros/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
sc_localization_ws/build_isolated/sc_localization/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
sc_localization_ws/build_isolated/usb_cam/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
sc_localization_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
sc_localization_ws/devel_isolated/apriltag/: setup.bash  setup.sh  setup.zsh
sc_localization_ws/devel_isolated/apriltag_ros/: .catkin  _setup_util.py
sc_localization_ws/devel_isolated/sc_localization/: .catkin  local_setup.sh
sc_localization_ws/devel_isolated/usb_cam/: .catkin
sc_progresscheck/devel/: .catkin  setup.sh
sc_progresscheck/src/practice/: CMakeLists.txt  make_a_move.cpp
(+112 files in other folders)
